gccida/g2/init_flow
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_flow/src/cfg.c:602:6: error: use of undeclared identifier 'initialized_12'
if ( initialized_12 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_flow/src/cfg.c:672:1: error: use of undeclared identifier 'initialized_12'
initialized_12 = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_flow/src/obj/cfg.o] Error 1
